2010-07-20  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/search_results.php: added icons and source code for order the
	rows in the list of alerts.

2010-07-20  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/search_results.php: added icons for order columns in the user
	list and agent list.

2010-07-20  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/setup/gis_step_2.php: fixed when the spanish translation have a
	problematic characters.
	Fixes: #3029149

2010-07-19  Raúl Mateos  <raulofpandora@gmail.com>

	* extras/pandoradb_migrate_v3.1_to_v3.2.sql: Updated year.

2010-07-19  Raúl Mateos  <raulofpandora@gmail.com>

	* operation/users/user_edit.php, godmode/users/configure_user.php: Use
	icon and name in groups. Solved link problem due to user list last commit.

2010-07-19  Dario Rodriguez  <dario.rodriguez@artica.es>

	* godmode/groups/group_list.php: fixed bug that allow create and update
	groups with name field empty.
	Fixes: #3031642

2010-07-19  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_agents.php: in function "get_agents" added the parameter
	$order to order list of agents.
	
	* operation/agentes/estado_agente.php: added icons for order by columns and
	source code for management this ordenation by Name, Os, Interval, Group and
	Last Contact. 

2010-07-19  Raúl Mateos  <raulofpandora@gmail.com>

	* operation/agentes/status_monitor.php, godmode/groups/group_list.php:
	Center image.

	* godmode/users/user_list.php: Added delete text to table.

2010-07-19  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: fixed in the function "get_user_groups", order
	the list of groups by id_grupo for to other external operations.

2010-07-19  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/users/user.php, godmode/users/user_list.php: added the default
	order to columns.
	
	* godmode/agentes/modificar_agente.php: added the source code to order by
	Name, OS or group column in the list agents.
